correzione abominio dto