@@ -6,7 +6,6 @@ import org.generation.italy.collectionarchive.models.service.JpaUserService;
 import org.generation.italy.collectionarchive.models.service.UserService;
 import org.generation.italy.collectionarchive.restdto.OrderDto;
 import org.generation.italy.collectionarchive.restdto.UserDto;
-import org.generation.italy.collectionarchive.restdto.logindto.UserInputDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,80 +14,68 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
-@CrossOrigin(origins = "*")
 @RequestMapping("/api/users")
+@CrossOrigin(origins = "*")
 public class UserRestController {
+
     private final UserService userService;
-    //private final PasswordEncoder passwordEncoder;
 
     @Autowired
-    public UserRestController(JpaUserService userService) { //Inserire il passwordEndcore in input
+    public UserRestController(UserService userService) {
         this.userService = userService;
-        //this.passwordEncoder = passwordEncoder;
     }
 
+    // GET tutti gli utenti
     @GetMapping
     public ResponseEntity<List<UserDto>> getAllUsers() {
-        List<UserDto> users = userService.findAllUsers().stream()
+        List<UserDto> users = userService.findAllUsers()
+                .stream()
                 .map(UserDto::toDto)
-                .peek(dto -> dto.setPassword(null)) // fai sparire la password qui
-                .toList();
+                .peek(dto -> dto.setPassword(null)) // nascondi la password
+                .collect(Collectors.toList());
         return ResponseEntity.ok(users);
     }
 
+    // GET utente per ID
     @GetMapping("/{id}")
     public ResponseEntity<UserDto> getUserById(@PathVariable int id) {
-        try {
-            Optional<User> user = userService.findUserById(id);
-            if(user.isEmpty()) return ResponseEntity.notFound().build();
-
-            UserDto dto = UserDto.toDto(user.get());
-            dto.setPassword(null);
-            return ResponseEntity.ok(dto);
-        } catch (DataException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        Optional<User> userOpt = userService.findUserById(id);
+        if (userOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
+        UserDto dto = UserDto.toDto(userOpt.get());
+        dto.setPassword(null); // occhio alla password
+        return ResponseEntity.ok(dto);
     }
 
+    // POST nuovo utente
     @PostMapping
-    public ResponseEntity<?> createUser(@RequestBody UserInputDto inputDto) {
-        try {
-            User user = inputDto.toEntity();
-            //user.setPassword(passwordEncoder.encode(user.getPassword()));
-            User created = userService.createUser(user);
-            UserDto dto = UserDto.toDto(created);
-            return ResponseEntity.status(HttpStatus.CREATED).body(dto);
-        } catch (DataException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("Errore nella creazione dell'utente: " + e.getMessage());
-        } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Username o e-mail già in uso! " + e.getMessage());
-        }
+    public ResponseEntity<UserDto> createUser(@RequestBody UserDto userDto) {
+        User user = userDto.toUser();
+        // Qui in futuro encoder per la password
+        User created = userService.createUser(user);
+        UserDto createdDto = UserDto.toDto(created);
+        createdDto.setPassword(null);
+        return ResponseEntity.status(HttpStatus.CREATED).body(createdDto);
     }
 
-
+    // PUT per aggiornare utente
     @PutMapping("/{id}")
-    public ResponseEntity<?> updateUser(@PathVariable int id, @RequestBody UserInputDto inputDto) {
-        try {
-            User user = inputDto.toEntity();
-            user.setUserId(id);
-            boolean updated = userService.updateUser(user);
-            return updated ? ResponseEntity.ok().build() : ResponseEntity.notFound().build();
-        } catch (DataException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+    public ResponseEntity<Void> updateUser(@PathVariable int id, @RequestBody UserDto userDto) {
+        User user = userDto.toUser();
+        user.setUserId(id);
+        boolean success = userService.updateUser(user);
+        return success ? ResponseEntity.ok().build() : ResponseEntity.notFound().build();
     }
 
+    // DELETE utente
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteUser(@PathVariable int id) {
-        try {
-            boolean deleted = userService.deleteUser(id);
-            return deleted ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
-        } catch (DataException e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        boolean success = userService.deleteUser(id);
+        return success ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
     }
 }
+
